--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
                         <h1 class="display-5 col-sm-12">Poke Match</h1>
                     </div>
                 </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-6">
+                <div  class="container">
+                    <div  class="row">
+                        <div  id="instructions" class="col-sm-6">
                             <p class="lead">
-                                <p>1. Each Pockemon holds a secret number value. <br>
-                                    2. Click a Pockemon to add it's value to your score! <br>
+                                <p>1. Each Pokemon holds a secret number value. <br>
+                                    2. Click a Pokemon to add it's value to your score! <br>
                                     3. Match the number and win! <br>
                                     4. Don't go over or you'll lose!</p>
                         </div>
 
 
-                        <div class="col-sm-6">
+                        <div id="scoring" class="col-sm-6">
                             <div class="row">
                                 <div class="col-sm-6">
                                     <h5>Random Number
@@ -62,25 +62,42 @@
                     </div>
                 </div>
             </div>
-            <div class="row ">
-                <div id="crystal1" class="col-sm-3">
-                    <img src="assets/bulb.jpg" alt="..." class="img-thumbnail border-5">
+            <span> <div id="row1" class="row ">
+               <div id="crystal1" class="col-sm-3">
+                    <img id="pic" src="assets/bulb.jpg" alt="..." class="img-thumbnail">
                 </div>
                 <div id="crystal2" class="col-sm-3">
-                    <img src="assets/squirtle.jpg" alt="..." class="img-thumbnail">
+                    <imG id="pic" src="assets/squirtle.jpg" alt="..." class="img-thumbnail">
                 </div>
                 <div id="crystal3" class="col-sm-3">
-                    <img src="assets/char.png" alt="..." class="img-thumbnail">
+                    <img id="pic" src="assets/char.png" alt="..." class="img-thumbnail">
                 </div>
                 <div id="crystal4" class="col-sm-3">
-                    <img src="assets/pika.jpg" alt="..." class="img-thumbnail">
+                    <img id="pic" src="assets/pika.jpg" alt="..." class="img-thumbnail">
                 </div>
 
-            </div>
+            </div></span>
         </div>
     </div>
     <!--jumboend-->
+    <div id="phone" class="container">
 
+     <div id="row2" class="row ">
+            <div id="crystal1">
+                 <img id="pic" src="assets/bulb.jpg" alt="..." class="img-thumbnail">
+             </div>
+             <div id="crystal2">
+                 <imG id="pic" src="assets/squirtle.jpg" alt="..." class="img-thumbnail">
+             </div>
+             <div id="crystal3">
+                 <img id="pic" src="assets/char.png" alt="..." class="img-thumbnail">
+             </div>
+             <div id="crystal4">
+                 <img id="pic" src="assets/pika.jpg" alt="..." class="img-thumbnail">
+             </div>
+
+         </div>
+         </div>
   
     <script>
         count = 1
